--- a/docs/Makefile
+++ b/docs/Makefile
@@ -50,6 +50,7 @@ clean:
 	rm -rf $(BUILDDIR)/*
 
 html:
+	sphinx-apidoc -o ./api ../pcigale
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
